--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -41,15 +41,16 @@
   font-size: 1.2rem;
 }
 
+// ----------------------------
+
 .graphs-section {
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: 2%;
-  padding: 1%;
+  margin-bottom: 3.5%;
 }
 
 .graphs-section div {
-  width: 27%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -57,8 +58,19 @@
 }
 
 .graphs-section img {
-  width: 55%;
+  width: 100%;
+  height: 80%;
 }
+
+.graphs-section .grant-rate-pie {
+  width: 20%;
+}
+
+.graphs-section h3 {
+  margin-top: 3.5%;
+}
+
+// ----------------------------
 
 .view-more-data-btn-container {
   height: 44px;
