section 2 jsx and styling

--- a/src/styles/RenderLandingPage.less
+++ b/src/styles/RenderLandingPage.less
@@ -41,8 +41,6 @@
   font-size: 1.2rem;
 }
 
-// ----------------------------
-
 .graphs-section {
   display: flex;
   justify-content: space-evenly;
@@ -69,8 +67,6 @@
 .graphs-section h3 {
   margin-top: 3.5%;
 }
-
-// ----------------------------
 
 .view-more-data-btn-container {
   height: 44px;
@@ -102,9 +98,29 @@
   font-size: 1.4rem;
 }
 
-// .bottom-section {
-//      ADD THIS BACK IN WHEN YOU HAVE A BOTTOM SECTION
-// }
+.bottom-section {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 70vh;
+  margin: 5% 2% 2% 2%;
+  font-size: 1.2rem;
+  font-family: 'acumin';
+}
+
+.bottom-section h1 {
+  font-size: 2.4rem;
+}
+
+.bottom-section section {
+  display: flex;
+  justify-content: space-around;
+}
+
+.bottom-section section div {
+  width: 25%;
+}
 
 .back-to-top {
   width: 8%;
